# chatapath-messaging-system-tech

./: .gitignore  Procfile  README.md  abra__olena_gut.postman_collection  abra__olena_gut.postman_environment  manage.py  pyproject.toml  pytest.ini
server/: asgi.py  urls.py  wsgi.py
server/apps/authentication/: admin.py  models.py  serializers.py  urls.py  views.py
server/apps/authentication/migrations/: 0001_initial.py
server/apps/chatapath/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
server/apps/chatapath/migrations/: 0001_initial.py  0002_alter_message_recipient_alter_message_sender.py
server/settings/: base.py  production.py
tests/: factories.py
tests/unit/: conftest.py
tests/unit/apps/chatapath/: test_models.py  test_views.py
